<ui version="4.0" >
 <class>CheckPwd</class>
 <widget class="QDialog" name="CheckPwd" >
  <property name="windowModality" >
   <enum>Qt::NonModal</enum>
  </property>
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>210</width>
    <height>125</height>
   </rect>
  </property>
  <property name="contextMenuPolicy" >
   <enum>Qt::DefaultContextMenu</enum>
  </property>
  <property name="acceptDrops" >
   <bool>false</bool>
  </property>
  <property name="windowTitle" >
   <string>输入用户名密码</string>
  </property>
  <property name="windowIcon" >
   <iconset>
    <normaloff>:/img/images/user.png</normaloff>:/img/images/user.png</iconset>
  </property>
  <property name="styleSheet" >
   <string notr="true" >font: 12pt "Sans Serif";</string>
  </property>
  <widget class="QGroupBox" name="groupBox" >
   <property name="geometry" >
    <rect>
     <x>10</x>
     <y>0</y>
     <width>191</width>
     <height>111</height>
    </rect>
   </property>
   <property name="title" >
    <string>密码验证</string>
   </property>
   <widget class="QPushButton" name="btn_ok" >
    <property name="geometry" >
     <rect>
      <x>40</x>
      <y>70</y>
      <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text" >
     <string>确 定</string>
    </property>
    <property name="default" >
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="btn_close" >
    <property name="geometry" >
     <rect>
      <x>120</x>
      <y>70</y>
      <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text" >
     <string>关 闭</string>
    </property>
    <property name="default" >
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="txt_password" >
    <property name="geometry" >
     <rect>
      <x>80</x>
      <y>30</y>
      <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="echoMode" >
     <enum>QLineEdit::PasswordEchoOnEdit</enum>
    </property>
   </widget>
   <widget class="QLabel" name="label_2" >
    <property name="geometry" >
     <rect>
      <x>10</x>
      <y>30</y>
      <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text" >
     <string> 密  码：</string>
    </property>
   </widget>
  </widget>
 </widget>
 <tabstops>
  <tabstop>txt_password</tabstop>
  <tabstop>btn_ok</tabstop>
  <tabstop>btn_close</tabstop>
 </tabstops>
 <resources>
  <include location="img.qrc" />
 </resources>
 <connections/>
</ui>
